# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: cli.py  engene.py  engine.py  game_even.py
brain_games/games/: calc.py  even_number.py  game.py  game_calc.py  game_gcd.py  gcd.py  prime_number.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
