[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
packages = [
  { include = "brain_games" },
]
authors = ["Anton Nikitin <palich.nik82@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
