[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Приложение для командной строки. Состоит из 5 логических игр: 1 brain-even, 2 brain-calc, 3 brain-gcd, 4 brain-progression, 5 brain-prime"
packages = [
  { include = "brain_games" },
]
authors = ["Anton Nikitin <palich.nik82@gmail.com>"]
repository = https://github.com/Nikapa2/python-project-lvl1

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
